--- a/style.css
+++ b/style.css
@@ -34,3 +34,23 @@ h1{
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+/* img container */
+.image-container{
+    margin: 10px 30%;
+    margin-top: 5px;
+}
+.image-container img{
+    width: 100%;
+}
+
+/* media query for larger phones */
+
+@media screen  and (max-width: 600px) {
+    h1{
+        font-size:20px;
+    }
+    .image-container{
+        margin: 10px;
+    }
+}
